# RTK_IT

./: .gitignore  README.md  docker-compose.frontend.yml  docker-compose.yaml  example.env  init.sql  init_1.sql  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_all.sh  settings.py  tailwind.config.js  test.csv
AI/: .python-version  api.py  main.py  pyproject.toml  settings.py  yandex_gpt_client.py
DB/: AIPredictions.py  Base_model.py  Connection.py  DataBaseManager.py  InventoryHistory.py  Products.py  Robots.py  Users.py  models.py  schemas.py
ai/: historicalData.json  inventoryData.json  settings.py  yandex_gpt_client.py
api/: api.py  emulator.py  invent.json  requirements.txt  robots.py  schemas.py  test.json  test.py  websocket_manager.py
api/simple_version/: emulator_simple.py  server.py  test.py
app/: dependencies.py  main.py
app/api/v1/: router.py  schemas.py
app/api/v1/admin/: router.py
app/api/v1/ai/: router.py  yandex_gpt_client.py
app/api/v1/auth/: router.py
app/api/v1/dashboard/: router.py  websocket.py  websocket_manager.py
app/api/v1/inventory/: router.py
app/api/v1/robots/: router.py
app/api/v1/users/: router.py  schemas.py
app/core/: __init__.py  logger_config.py  models.py  security.py  settings.py
app/core/ai/: yandex_gpt_client.py
app/core/auth/: service.py
app/db/: DataBaseManager.py  __init__.py  session.py
app/db/models/: __init__.py  ai_prediction.py  inventory.py  product.py  robot.py  user.py
auth/: auth_service.py  main.py  schemas.py
auth-service/: auth_service.py
backend/: Dockerfile  backDockerfile.txt  pytest.ini  run.py  settings.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py  schemas.py
backend/app/core/: __init__.py  logger_config.py  models.py  security.py  settings.py
backend/app/core/ai/: yandex_gpt_client.py
backend/app/core/auth/: service.py
backend/app/db/: DataBaseManager.py  __init__.py  session.py
backend/app/db/models/: __init__.py  ai_prediction.py  inventory.py  product.py  robot.py  user.py
backend/tests/: test_database_manager.py
db/: DataBaseManager.py  models.py  test_data.py
emulator/: emulator.py  emulatorDockerfile.txt
frontend/: package.json
frontend/src/: App.css
frontend/src/auth/: index.js
frontend/src/components/: Header.js  InteractiveWarehouseMap.js  Loader.js  MapControls.js  NotFound.js  NotificationsPanel.js  ProtectedRoute.js
frontend/src/features/admin/: index.js
frontend/src/features/history/: index.js
frontend/src/hooks/: useAuth.js  useTheme.js
frontend/src/store/: index.js  warehouseSlice.js
public/: index.html
src/: App.js  Dockerfile  index.css
src/components/: CSVUploadModal.js  Header.js  InteractiveWarehouseMap.js
src/hooks/: useTheme.js  useWarehouseWebSocket.js
src/pages/: Admin.js  Dashboard.js  ForgotPassword.js  History.js  Login.js
src/store/: warehouseSlice.js
tests/: test_api.py  test_database_manager.py  test_safe_parse_json.py
(+65 files in other folders)
